styled grid for middle and right-nav
- added div.middle to keep "Your Projects" separate from projects grid
- used grid to move projects
- used flex on div.projects to fill remaining page
- used grid on div.announcements and div.trending

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 </head>
 <body>
     <div class="left-nav">
-        <h1>Dashboard</h1>
+        <div class="dashboard-title">
+            <img src="./assets/view-dashboard.svg" />
+            <h1>Dashboard</h1>
+        </div>
         <ul>
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
+            <li id="home">Home</li>
+            <li id="profile">Profile</li>
+            <li id="messages">Messages</li>
+            <li id="history">History</li>
+            <li id="tasks">Tasks</li>
+            <li id="communities">Communities</li>
         </ul>
         <ul>
             <li>Settings</li>
@@ -32,32 +35,35 @@
         <button>Upload</button>
         <button>Share</button>
     </div>
-    <div class="projects">
+    <div class="middle">
         <h2>Your Projects</h2>
-        <div class="project">
-            <h3>Super Cool Project</h3>
-            <p>project project project...</p>
+        <div class="projects">
+            <div class="project">
+                <h3>Super Cool Project</h3>
+                <p>project project project...</p>
+            </div>
+            <div class="project">
+                <h3>Less Cool Project</h3>
+                <p>project project project...</p>
+            </div>
+            <div class="project">
+                <h3>Impossible App</h3>
+                <p>project project project...</p>
+            </div>
+            <div class="project">
+                <h3>Easy Peasy App</h3>
+                <p>project project project...</p>
+            </div>
+            <div class="project">
+                <h3>Ad Blocker</h3>
+                <p>project project project...</p>
+            </div>
+            <div class="project">
+                <h3>Money Maker</h3>
+                <p>project project project...</p>
+            </div>            
         </div>
-        <div class="project">
-            <h3>Less Cool Project</h3>
-            <p>project project project...</p>
-        </div>
-        <div class="project">
-            <h3>Impossible App</h3>
-            <p>project project project...</p>
-        </div>
-        <div class="project">
-            <h3>Impossible App</h3>
-            <p>project project project...</p>
-        </div>
-        <div class="project">
-            <h3>Impossible App</h3>
-            <p>project project project...</p>
-        </div>
-        <div class="project">
-            <h3>Impossible App</h3>
-            <p>project project project...</p>
-        </div>
+
     </div>    
     <div class="right-bar">
         <h2>Announcements</h2>        
