styled div.left-nav
- removed ul elements from div.left-nav and replaced with paragraphs
- added div.nav-link to each paragraph in div.left-nav and styled with flexbox
- added div.upper-nav and div.lower-nav to create gap between "communities" and "settings"

--- a/index.html
+++ b/index.html
@@ -12,23 +12,59 @@
             <img src="./assets/view-dashboard.svg" />
             <h1>Dashboard</h1>
         </div>
-        <ul>
-            <li id="home">Home</li>
-            <li id="profile">Profile</li>
-            <li id="messages">Messages</li>
-            <li id="history">History</li>
-            <li id="tasks">Tasks</li>
-            <li id="communities">Communities</li>
-        </ul>
-        <ul>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
-        </ul>
+            <div class="nav-top">
+                <div class="nav-link">
+                    <img src="./assets/home.svg" class="icon" />
+                    <p id="home">Home</p>                
+                </div>
+                <div class="nav-link">
+                    <img src="./assets/account-box-outline.svg" class="icon" />
+                    <p id="profile">Profile</p>                
+                </div>
+                <div class="nav-link">
+                    <img src="./assets/message-reply.svg" class="icon" />
+                    <p id="messages">Messages</p>                
+                </div>
+                <div class="nav-link">
+                    <img src="./assets/clock-time-three.svg" class="icon" />
+                    <p id="history">History</p>                
+                </div>
+                <div class="nav-link">
+                    <img src="./assets/note.svg" class="icon" />
+                    <p id="tasks">Tasks</p>                
+                </div>
+                <div class="nav-link">
+                    <img src="./assets/account-group.svg" class="icon" />
+                    <p id="communities">Communities</p>                
+                </div>
+            </div>
+            <div class="nav-bottom">
+                <div class="nav-link">
+                    <img src="./assets/cog.svg" class="icon" />
+                    <p>Settings</p>                
+                </div>
+                <div class="nav-link">
+                    <img src="./assets/help-box.svg" class="icon" />
+                    <p>Support</p>                
+                </div>
+                <div class="nav-link">
+                    <img src="./assets/shield-check.svg" class="icon" />
+                    <p>Privacy</p>                
+                </div>                
+            </div>
+
+
+
     </div>
     <div class="header">
-        <input type="text" placeholder="this will be the search bar..."/>
-        <p>John Doe</p>
+        <div class="upper-header">
+            <img src="./assets/magnify.svg" alt="search-icon" class="icon"/>
+            <input type="text" placeholder="this will be the search bar..." class="icon"/>
+            <img src="./assets/bell-ring-outline.svg" alt="notif" class="icon"/>
+            <img src="./assets/account-circle.svg" alt="profile-picture" class="icon"/>
+            <p>John Doe</p>            
+        </div>
+
         <p>Hi there,</p>
         <h1>John Doe (@john)</h1>
         <button>New</button>
