basic styling of div.upper-header
- created new divs for items that go to the left and right
- used flexbox on div.upper-header
- used flexbox on each new div

--- a/index.html
+++ b/index.html
@@ -58,11 +58,15 @@
     </div>
     <div class="header">
         <div class="upper-header">
-            <img src="./assets/magnify.svg" alt="search-icon" class="icon"/>
-            <input type="text" placeholder="this will be the search bar..." class="icon"/>
-            <img src="./assets/bell-ring-outline.svg" alt="notif" class="icon"/>
-            <img src="./assets/account-circle.svg" alt="profile-picture" class="icon"/>
-            <p>John Doe</p>            
+            <div class="search">
+                <img src="./assets/magnify.svg" alt="search-icon" class="icon"/>
+                <input type="text" placeholder="this will be the search bar..." class="icon"/>                
+            </div>
+            <div class="upper-icons">
+                <img src="./assets/bell-ring-outline.svg" alt="notif" class="icon"/>
+                <img src="./assets/account-circle.svg" alt="profile-picture" class="icon"/>
+                <p>John Doe</p>            
+            </div>
         </div>
 
         <p>Hi there,</p>
