styled general background colors, padding, margins

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="header">
         <div class="upper-header">
             <div class="search">
-                <img src="./assets/magnify.svg" alt="search-icon" class="icon"/>
+                <img src="./assets/magnify.svg" alt="search-icon" class="icon" />
                 <input type="text" placeholder="this will be the search bar..." class="icon"/>                
             </div>
             <div class="upper-icons">
@@ -68,12 +68,20 @@
                 <p>John Doe</p>            
             </div>
         </div>
-
-        <p>Hi there,</p>
-        <h1>John Doe (@john)</h1>
-        <button>New</button>
-        <button>Upload</button>
-        <button>Share</button>
+        <div class="lower-header">
+            <div class="greeting">
+                <img src="./assets/account-circle.svg" alt="profile-picture" class="profile-picture"/>
+                <div class="greeting-words">
+                    <p>Hi there,</p>
+                    <h1>John Doe (@john)</h1>                     
+                </div>    
+            </div>
+            <div class="buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>                  
+            </div>
+        </div>
     </div>
     <div class="middle">
         <h2>Your Projects</h2>
