finished basic styling!
could go back and add icons to each project that end-result is supposed to have, will save for later

--- a/index.html
+++ b/index.html
@@ -132,20 +132,40 @@
         <h2>Trending</h2>
         <div class="trending">
             <div class="trend">
-                <h5>@person</h5>
-                <p>title of person</p>
+                <div class="trend-left">
+                    <img src="./assets/account-circle.svg" alt="profile-picture" class="trend-picture"/>                    
+                </div>
+                <div class="trend-right">
+                    <h5>@person</h5>
+                    <p>title of person</p>                    
+                </div>
             </div>
             <div class="trend">
-                <h5>@person</h5>
-                <p>title of person</p>
+                <div class="trend-left">
+                    <img src="./assets/account-circle.svg" alt="profile-picture" class="trend-picture"/>                    
+                </div>
+                <div class="trend-right">
+                    <h5>@person</h5>
+                    <p>title of person</p>                    
+                </div>
             </div>
             <div class="trend">
-                <h5>@person</h5>
-                <p>title of person</p>
+                <div class="trend-left">
+                    <img src="./assets/account-circle.svg" alt="profile-picture" class="trend-picture"/>                    
+                </div>
+                <div class="trend-right">
+                    <h5>@person</h5>
+                    <p>title of person</p>                    
+                </div>
             </div>
             <div class="trend">
-                <h5>@person</h5>
-                <p>title of person</p>
+                <div class="trend-left">
+                    <img src="./assets/account-circle.svg" alt="profile-picture" class="trend-picture"/>                    
+                </div>
+                <div class="trend-right">
+                    <h5>@person</h5>
+                    <p>title of person</p>                    
+                </div>
             </div>
         </div>        
     </div>
